auth is working correct